@@ -9,6 +9,9 @@ Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
   Changed subroutine inclusive time to not count time
     spent recursed into the same subroutine.
 
+  Removed use of vfscanf() to improve portability,
+    thanks to Jan Dubois.
+
 =head2 Changes in Devel::NYTProf 2.05 (svn r498) 8th Oct 2008
 
   Fixed alteration of $! during profiling thanks to Slaven Rezic.
